# quadratic-utils

./: CMakeLists.txt  README.md
src/: factoredform.c  getroots.c  helpdialog.c  main.c  versiondialog.c
src/include/: factoredform.h  getroots.h  helpdialog.h  versiondialog.h
